Adding new images, fixing some items in the html.  Updating the readme.

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -55,7 +55,7 @@
                         <a id="nav-about-us" class="nav-link" href="#our-story">Our Story</a>
                     </li>
                     <li class="nav-item">
-                        <a id="nav-success" class="nav-link" href="#our-mission">Our Mission</a>
+                        <a id="nav-mission" class="nav-link" href="#our-mission">Our Mission</a>
                     </li>
                     <li class="nav-item">
                         <a id="nav-donate" class="nav-link nav-donate-link" href="#donate">Donate</a>
@@ -115,14 +115,14 @@
                     </div>
 
                     <div id="about-us-img" class="col-sm-5">
-                        <img src="images/about-us/classroom.jpg" alt="">
+                        <img src="images/classroom.jpg" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="mission">
+    <section id="our-mission">
         <div class="section-content">
             <div class="container">
                 <div class="row">
@@ -132,6 +132,9 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div id="mission-img" class="col-sm-5">
+                        <img src="images/children.jpg" alt="">
+                    </div>
                     <div class="col-sm-7">
                         <div>
                             <p>
@@ -148,10 +151,6 @@
                                 life changing gift of education to as many children as possible!
                             </p>
                         </div>
-                    </div>
-
-                    <div id="about-us-img" class="col-sm-5">
-                        <img src="images/about-us/classroom.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -184,8 +183,8 @@
                 <div class="col-sm-6">
                     <div class="footer-social">
                         <a class="social" id="footer-facebook" href="https://www.facebook.com/brightpowerinc/"><i class="fa fa-facebook"></i></a>
-                        <a class="social" id="footer-twitter" href="https://twitter.com/brightpowerinc?lang=en"><i class="fa fa-twitter"></i></a>
-                        <a class="social" id="footer-linkedin" href="https://www.linkedin.com/company-beta/931653/"><i class="fa fa-linkedin"></i></a>
+                        <a class="social" id="footer-twitter" href="#"><i class="fa fa-twitter"></i></a>
+                        <a class="social" id="footer-linkedin" href="#"><i class="fa fa-linkedin"></i></a>
                         <a class="social" id="footer-email" href="mailto:info@excellencepluscm.com"><i class="fa fa-envelope-o"></i></a>
                         <p>Excellence Plus Foundation<br>Copyright 2017 · All rights reserved</p>
                     </div>
