Fixing a few styles on the page

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-md-8 offset-md-2">
           <p class="medium-paragram">
-            We started supporting the elementary school of Kahn, in Cameroon, during the school year 2013-2014. That year, the school had 14 students and a low 31% success rate. With our intervention, in just 4 years, the school just ended the 2017-2018 school year with 49 students and an astonishing 87% success rate!
+            We started supporting the elementary school of Kahn, in Cameroon, during the school year 2013-2014. That year, the school had 14 students and a low 31% success rate. With our intervention, in just 4 years, the school ended the 2017-2018 school year with 49 students and an astonishing 87% success rate!
           </p>
           <a id="btncircle" href="#our-story" class="btn page-scroll">
                 <i class="fas fa-angle-double-down"></i>
@@ -84,10 +84,10 @@
         </div>
       </div>
       <div class="row">
-        <div id="about-us-img" class="col-sm-5">
+        <div id="about-us-img" class="col-md-5">
           <img src="images/classroom.jpg" alt="Classroom with Zach and Katie">
         </div>
-        <div class="col-sm-7">
+        <div class="col-md-7">
           <div>
             <p>
               Inspired by founder, Dr. Zachee Pouga’s, powerful personal story, Excellence Plus aims to ensure that each child, from whatever corner of the world and regardless of social circumstances, is able to complete at the very least, an elementary school education.
@@ -118,10 +118,10 @@
         </div>
       </div>
       <div class="row">
-        <div id="mission-img" class="col-sm-5">
+        <div id="mission-img" class="col-md-5">
           <img src="images/children.jpg" alt="Children holding their certificates">
         </div>
-        <div class="col-sm-7">
+        <div class="col-md-7">
           <div>
             <p>
               Our mission unfolds on two fronts. On the one hand, we search, and identify children born in extreme poverty and support them to pursue an education, something they would not be able to do otherwise. We truly believe education is the great equalizer,
@@ -150,13 +150,11 @@
             <br>New York, NY 10021
             <br>(646) 838-5266</p>
         </div>
-        <div class="col-sm-6">
-          <div class="footer-social">
-            <a class="social" id="footer-donate" href="https://donorbox.org/excellence-plus-foundation/"><i class="fas fa-hand-holding-usd"></i></a>
-            <a class="social" id="footer-facebook" href="https://www.facebook.com/ExcellencePlusFoundation/"><i class="fab fa-facebook-f"></i></a>
-            <a class="social" id="footer-email" href="mailto:info@excellencepluscm.com"><i class="fa fa-envelope"></i></a>
-            <p>Excellence Plus Foundation<br>Copyright 2018 · All rights reserved</p>
-          </div>
+        <div class="col-sm-6 footer-social">
+          <a class="social" id="footer-donate" href="https://donorbox.org/excellence-plus-foundation/"><i class="fas fa-hand-holding-usd"></i></a>
+          <a class="social" id="footer-facebook" href="https://www.facebook.com/ExcellencePlusFoundation/"><i class="fab fa-facebook-f"></i></a>
+          <a class="social" id="footer-email" href="mailto:info@excellencepluscm.com"><i class="fa fa-envelope"></i></a>
+          <p>Excellence Plus Foundation<br>Copyright 2018 · All rights reserved</p>
         </div>
       </div>
     </div>
